[FIX] overflow-x hidden

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -7,6 +7,7 @@
 }
 body {
     background-color: rgb(241, 241, 241);
+    overflow-x: hidden;
 }
 
 .colore-viola{
